docs(overview): state the JDK baseline where the kernel target is stated
Review of #66 caught this: `overview.md`'s header line still said the JDK
baseline was 26 with the preview flag, which this slice changes. CLAUDE.md and
ADR-028 were updated in the same commit and this sibling was not — the exact
shape of drift the class-file gate cannot catch, because it is a doc.

The remaining 0.10.2 references in this file (the Phase 3B-β/γ kernel-gate note,
the status table's "SB4 matrix — Not started") are a wider sanitation pass and
stay out of this slice.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>